Fix load times on mobile by hiding header image on smaller screen sizes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -174,15 +174,16 @@ footer {
 
 /* Give images in header correct sizing to help load times */
 .img-size {
-    width: 296px;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
+    /* width: 296px; */
+    display: none;
+    /*margin-left: auto;
+    margin-right: auto;*/
 }
 
 /* Centering text on smaller screens under images */
 .ref-center {
-    text-align: center;
+    /*text-align: center;*/
+    display: none;
 }
 
 /* Price Points Table Backgrounds and Width */
@@ -223,6 +224,28 @@ footer {
     max-height: 279.95px;
 }
 
+/* Media Query for Tablet (550px) */
+@media screen and (min-width: 550px) {
+    /* Adjusting image sizes in header for bigger screen sizes to improve load times */
+    .img-size {
+        width: 496px;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    /* Revealing image reference in header on larger screens */
+    .ref-center {
+        display: block;
+        text-align: center;
+    }
+
+    /* Adjusting header paragrpahs to be normal size on tablet screen sizes */
+    .headerp {
+        font-size: 100%;
+    }
+} 
+
 /* Media Query for Tablet (768px) */
 @media screen and (min-width: 768px) {
 
@@ -250,11 +273,6 @@ footer {
     /* Adjusting image sizes in header for bigger screen sizes to improve load times */
     .img-size {
         width: 696px;
-    }
-
-    /* Adjusting header paragrpahs to be normal size on tablet screen sizes */
-    .headerp {
-        font-size: 100%;
     }
 }
 
